# biliass

./: .gitignore  README.md  danmaku2ass.py  justfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint-and-fmt.yml  test.yml  unit-test.yml
biliass/: __init__.py  __main__.py  __version__.py  biliass.py
biliass/protobuf/: danmaku_pb2.py  danmaku_pb2.pyi
scripts/: gen_test_files.py
tests/: test_protobuf.py  test_xml.py
