[tool.poetry]
name = "biliass"
version = "1.3.7-dev.2"
description = "将 B 站 XML 弹幕转换为 ASS 弹幕"
authors = ["m13253", "Nyakku Shigure <sigure.qaq@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/yutto-dev/biliass"
repository = "https://github.com/yutto-dev/biliass"
keywords = ["bilibili", "yutto", "Danmaku2ASS"]
include = ["py.typed", "*.pyi", "**/*.pyi"]
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.7"
protobuf = "^4.21.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^22.1"
tomli = { version = "^2.0.1", python = "<3.11" }
pytest-rerunfailures = "^10.2"
requests = "^2.28.1"

[tool.poetry.scripts]
biliass = "biliass.__main__:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
add_imports = ["from __future__ import annotations"]
skip = ["setup.py", ".venv"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
