[tool.poetry]
name = "biliass"
version = "1.3.12"
description = "将 B 站 XML 弹幕转换为 ASS 弹幕"
authors = ["m13253", "Nyakku Shigure <sigure.qaq@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/yutto-dev/biliass"
repository = "https://github.com/yutto-dev/biliass"
keywords = ["bilibili", "yutto", "Danmaku2ASS"]
include = ["biliass/py.typed", "*.pyi", "**/*.pyi"]
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.9"
protobuf = "^5.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
tomli = { version = "^2.0.1", python = "<3.11" }
pytest-rerunfailures = "^14.0"
requests = "^2.32.2"
ruff = "^0.6.4"

[tool.poetry.scripts]
biliass = "biliass.__main__:main"

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = ["*_pb2.py"]

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Isort
  "I",
  # Pyupgrade
  "UP",
  # Flake8-pyi
  "PYI",
  # Yesqa
  "RUF100",
]
ignore = [
  "E501", # line too long, duplicate with ruff fmt
  "F401", # imported but unused, duplicate with pyright
  "F841", # local variable is assigned to but never used, duplicate with pyright
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
known-first-party = ["biliass"]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["I"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
